--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -1,5 +1,7 @@
-@for $i from 1 to 10{
-    .con-#{$i}{
-        outline:1px tomato;
-    }
+@for $i from 1 to 10 {
+  .con-#{$i} {
+    abottom: auto;
+    align-self: auto;
+    outline: 1px tomato;
+  }
 }
