--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -1,7 +1,10 @@
 @for $i from 1 to 10 {
   .con-#{$i} {
-    abottom: auto;
     align-self: auto;
+    bottom: auto;
     outline: 1px tomato;
   }
+}
+
+a {
 }
